syntax = "proto3";

package api.sastoj.admin.problem;

option go_package = "sastoj/api/sastoj/admin/problem;problem";
option java_multiple_files = true;
option java_package = "api.sastoj.admin.problem";

import "google/api/annotations.proto";

service Problem {
  rpc CreateProblem (CreateProblemRequest) returns (CreateProblemReply){
    option (google.api.http) = {
      post: "/problem",
      body: "*"
    };
  };
  rpc UpdateProblem (UpdateProblemRequest) returns (UpdateProblemReply){
    option (google.api.http) = {
      put: "/problem",
      body: "*"
    };
  };
  rpc DeleteProblem (DeleteProblemRequest) returns (DeleteProblemReply){
    option (google.api.http) = {
      delete: "/problem/{id}",
    };
  };
  rpc ListProblem (ListProblemRequest) returns (ListProblemReply){
    option (google.api.http) = {
      get: "/problem/list",
    };
  };
  rpc GetProblem (GetProblemRequest) returns (GetProblemReply){
    option (google.api.http) = {
      get: "/problem/{id}",
    };
  };
}

message CreateProblemRequest {
  string title = 2;
  string content = 3;
  int32 point =4;
  int64 contestId = 5;
  int32 caseVersion = 6;
  int32 index = 7;
  string config = 8;
  int64 ownerId = 9;
  Visibility visibility = 10;
}

enum Visibility{
  Private = 0;
  Public = 1;
  Contest = 2;
}

message CreateProblemReply {
  int64 id = 1;
}

message UpdateProblemRequest {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int32 point =4;
  int64 contestId = 5;
  int32 caseVersion = 6;
  int32 index = 7;
  string config = 8;
  int64 ownerId = 9;
  Visibility visibility = 10;
}
message UpdateProblemReply {
  bool success = 1;
}

message DeleteProblemRequest {
  int64 id = 1;
}
message DeleteProblemReply {
  bool success = 1;
}

message GetProblemRequest {
  int64 id = 1;
}
message GetProblemReply {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int32 point =4;
  int64 contestId = 5;
  int32 caseVersion = 6;
  int32 index = 7;
  string config = 8;
  int64 ownerId = 9;
  Visibility visibility = 10;
}

message ListProblemRequest {
  int32 size = 1;
  int32 currency = 2;
}

message ListProblemReply {
  message Problem {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int32 point =4;
    int64 contestId = 5;
    int32 caseVersion = 6;
    int32 index = 7;
    string config = 8;
    int64 ownerId = 9;
    Visibility visibility = 10;
  }
  int32 currency = 2;
  int32 total = 1;
  repeated Problem problems = 3;
}